--- a/assets/views/index.html
+++ b/assets/views/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Blocks</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css" />
+  <link rel="alternate" href="/posts.xml" type="application/rss+xml" />
+
   <style>
     body {
       max-width: 540px;
