--- a/assets/static/custom.css
+++ b/assets/static/custom.css
@@ -55,3 +55,10 @@ a {
 .post-parent-footer {
     font-size: .7rem;
 }
+
+.form-footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
